[gd_scene load_steps=2 format=3 uid="uid://0td57x52xmob"]

[ext_resource type="Script" path="res://scripts/ui/summary.gd" id="1_summary"]

[node name="Summary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_summary")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DUNGEON COMPLETE"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ShopLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "UPGRADE SHOP"
horizontal_alignment = 1

[node name="UpgradeGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Next Run"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_run_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_pressed"]
